--- a/ECommerceApp/ECommerceApp.csproj
+++ b/ECommerceApp/ECommerceApp.csproj
@@ -51,4 +51,7 @@
     <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
 </Project>
